SQuirreL SQL Client Change Log
==============================

Not yet released - available from SVN or in the latest snapshot:
----------------------------------------------------------------

Bug-fixes:

2992443: Cannot use RSyntax or Netbeans editors

Parser could be triggered far to often which resulted in high CPU and memory load.
This problem was caused by redundant carriage return chars (\r).

Any redundant carriage return chars (\r) are removed from files.
On Win Platforms carriage return line feeds (\r\n) are kept for new lines.

3.1.1 (4/24/2010)
================

Enhancements:

Code completion Plugin:
 - Users may choose to see column remarks in completion lists.
   See Menu File --> New Session Properties --> Code Completion --> Checkbox an bottom of panel

Hibernate Plugin:
  - Results of HQL Queries can be displayed as objects
  - Hibernate logs can be seen in SQuirreL logs when Hibernate logging is configured for console output.


Bug-Fixes:

2991709: Quotes missing in squirrel-sql.bat
2990527: nChar() is unknown field
2982594 / 2988387: RSyntax editor crash
When database errors occured while loading table columns, SQuirreL slowed down and produced a lot of log messages.
2981691 / 2981694: squirrel-sql.bat fails on Windows 7 64 bit
2980873: squirrel-sql.bat doesn't work out of box
2978540: Identifiers starting with '_' where not handled as identifiers by the RSyntax lexer. This resulted in syntax coloring and completion problems. 
2974533: Informix: Method can be called only once. / ErrorCode: -79
2965617: Fail to open session with RSyntax editor
2963371: Splash on 3.1 - copyright (was not updated for 2010)



3.1 (3/3/2010)
================

Enhancements:

Updated Translations:
 - Korean (Thanks to Youngwoo Kim)
 - Chinese (Thanks to xpdz)
 - French (Thanks to Erwan DUROSELLE)
 
Improved display of SQL result metadata

Hibernate Plugin:
  The Classpath configuration now allows to move entries up or down. 
